--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.25.0
-pandas==2.1.0
-numpy==1.25.2
-scikit-learn==1.4.2
-matplotlib==3.8.0
-seaborn==0.12.3
+streamlit>=1.15.0,<2.0.0
+pandas>=1.3.0,<2.0.0
+numpy>=1.21.0,<1.25.0
+scikit-learn>=1.0.0,<1.3.0
+matplotlib>=3.4.0,<4.0.0
+seaborn>=0.11.0,<0.13.0
