--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ numpy>=1.21.0,<1.25.0
 scikit-learn>=1.0.0,<1.3.0
 matplotlib>=3.4.0,<4.0.0
 seaborn>=0.11.0,<0.13.0
+setuptools>=60.0.0
+pip>=24.3.1
